<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FitnessTracker</string>
    <string name="action_settings">Settings</string>
    <string name="schedule">Schedule</string>

    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    
    <!-- Jockes skit -->
    <string name="hintTxtItem">Fyll i en ny träning här</string>
    <string name="hintTxtNy">Fyll i en ny träning här</string>
    <string name="lblBtnAdd">Add Item</string>
    <string name="lblBtnSkp">Skapa</string>
    <string name="lblBtnCnfrm">Bekräfta</string>
    <string name="txtEmpty">List is empty</string>
    <string name="addText">Enter amount here</string>
    <string name="addMngd">Ange mängd</string>
    <string name="textFrbrn">Förbränning (kcal/30min):</string>
    
    
    <!-- Following strings are for user preferences -->
    <string name="register_preferences">Preferences</string>
      <string name="register_name">Enter your name</string>
      <string name="register_age">Enter your age</string>
      <string name="register_weight">Enter your weight in kg</string>
      <string name="register_height">Enter your height in cm</string>
      <string name="register_male">Male</string>
      <string name="register_female">Female</string>
      <string name="register_button_apply">Apply</string>
     
    <!-- Following strings are for ScheduleFragment --> 
    <string name="dateOfToday">Date of Today</string>
      
    <!-- Following strings are for HomeFragment -->
    <string name="addFood_Button">Add Food</string>
    <string name="addWorkout_Button">Add Workout</string>
    <string name="seeAddedItem_Button">Total list</string>
    <string name="Progressbar_Food">Food</string>
    <string name="Progressbar_Total">Total </string>
    <string name="Progressbar_Workout">Workout</string>
    
    <!-- Goal details -->
    <string name="GldTlbk">Tillbaka</string>
    <string name="GldHd">Mål detaljer:</string>
    <string name="GldBtn">Ta bort mål</string>
    
    <!-- Add new work out type -->
    <string name="NwTtl">Lägg till ny träningstyp</string>
    <string name="NwNm">Träningens namn:</string>
    <string name="NwClr">Kalorier (/30 min):</string>
    <string name="NwSnd">Spara i databasen</string>
    
    <!-- Add new food type -->
    <string name="NfTtl">Lägg till ny matprodukt</string>
    <string name="NfNm">Namn:</string>
    <string name="NfKcl">Kcal (/100g):</string>
    <string name="NfCrb">Kolhydrater (/100g):</string>
    <string name="NfPrt">Protein (/100g):</string>
    <string name="NfFt">Fett (/100g):</string>
    <string name="NfSnd">Spara i databasen</string>
     
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Hem</item>
        <item >Kalender</item>
        <item >Tillagda produkter</item>
        <item >Träning</item>
        <item >Mat</item>
        <item >Mål</item>
        <item >Info träning</item>
        <item >Inställningar</item>
    </string-array>
     
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_status</item>
        <item>@drawable/ic_calendar</item>
        <item>@drawable/ic_added_items</item>
        <item>@drawable/ic_workout</item>
        <item>@drawable/ic_food</item>
        <item>@drawable/ic_goal</item>
        <item>@drawable/ic_data</item>
        <item>@drawable/ic_settings</item>
        
    </array>
     
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    
    
    
</resources>
