<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<TextView
        android:id="@+id/dataAddName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
	
	<TextView
        android:id="@+id/dataAddDescript"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dataAddName"
        android:text="@string/textFrbrn"
    />

    
    <EditText
       android:id="@+id/addEdit1"
       android:layout_width="240dp"
       android:layout_height="wrap_content"
       android:layout_below="@id/dataAddDescript"
       android:inputType="number"
       android:hint="@string/addMngd"
   />
    
    <Button
       android:id="@+id/btnCnfrm"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/addEdit1"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="259dp"
       android:background="@drawable/custom_button"
       android:padding="10dp"
       android:text="@string/lblBtnCnfrm"
   />

</RelativeLayout>
